fix table header layout on mobile

--- a/assets/component-cart-drawer.css
+++ b/assets/component-cart-drawer.css
@@ -241,7 +241,12 @@ cart-drawer-items {
 }
 
 .cart-drawer .cart-items thead tr {
+  display: table-row;
   margin-bottom: 0;
+}
+
+.cart-drawer .cart-items th {
+  border-bottom: 0.1rem solid rgba(var(--color-foreground), 0.08);
 }
 
 .cart-drawer .cart-item:last-child {
